--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
+    "path": "^0.12.7",
     "serve-favicon": "^2.5.1"
   }
 }
